bugfix if slide-titles get too long

--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -19,11 +19,13 @@ ol#slides>li>ol>li>ol>li>ol>li>.slide>.move
 	{width:25px;}
 ol#slides>li>ol>li>ol>li>ol>li>ol>li>.slide>.move
 	{width:10px;}
+ol#slides .slide
+	{display:block; float:left; clear:left;}
 ol#slides .slide .move
 	{display:block; float:left; width:70px;}
 ol#slides .slide .title
-	{display:block; float:left; width:200px;}
+	{display:block; float:left; width:350px;}
 ol#slides .slide .select-beamers
 	{display:block; float:left;}
 ol#slides .slide .options
-	{display:block;}
+	{display:block; float:left;}
